--- a/MonoDevelop.MicroFramework/packages.config
+++ b/MonoDevelop.MicroFramework/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ICSharpCode.NRefactory" version="5.5.1" targetFramework="net45" />
+  <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net45" />
+  <package id="Mono.Debugging" version="1.0.20170212.42" targetFramework="net45" />
   <package id="MonoDevelop.Addins" version="0.3.10" targetFramework="net45" />
+  <package id="NuGet.Build.Packaging" version="0.1.248" targetFramework="net45" developmentDependency="true" />
 </packages>
